@@ -57,21 +57,6 @@ dupstring_wlen(const char *s, unsigned len)
     return t;
 }
 
-/* Duplicate string on heap, returning length of string */
-
-/**/
-mod_export char *
-dupstring_glen(const char *s, unsigned *len_ret)
-{
-    char *t;
-
-    if (!s)
-	return NULL;
-    t = (char *) zhalloc((*len_ret = strlen((char *)s)) + 1);
-    strcpy(t, s);
-    return t;
-}
-
 /**/
 mod_export char *
 ztrdup(const char *s)
